--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -246,7 +246,7 @@
   }
   
   .skeleton-background {
-    background-image: linear-gradient(90deg, #0f172b, #1d2947 47.15%, #0f172b);
+    background-image: linear-gradient(90deg, #ccc, #f5f5f5 47.15%, #ccc);
     background-size: 400% 400%;
   }
 
